避免提交不必要的问题

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /Temp
 *.csproj
 *.sln
+Assets/Plugins/GameCreator/Data/Resources/Settings/core.general.asset
+Assets/Plugins/GameCreator/Data/Resources/Settings/core.welcome.asset
